# rules_playwright

./: README.md
playwright/: BUILD.bazel  extensions.bzl  repositories.bzl
playwright/private/: BUILD.bazel  download_urls.bzl  download_urls_test.bzl
