load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = [
        "//docs:__subpackages__",
    ],
    deps = [
        "//playwright/private:integrity_map",
        "//playwright/private:known_browsers",
        "//playwright/private:select_exec",
        "//playwright/private:unzip_browser",
        "//playwright/private:util",
    ],
)

starlark_doc_extract(
    name = "defs.doc_extract",
    src = "defs.bzl",
    symbol_names = [
        "playwright_integrity_map",
        "playwright_browser_matrix",
    ],
    deps = [":defs"],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = [
        "//docs:__subpackages__",
    ],
    deps = [
        ":repositories",
        "//playwright/private:download_urls",
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
    ],
)

starlark_doc_extract(
    name = "extensions.doc_extract",
    src = "extensions.bzl",
    deps = [":extensions"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = [
        ":__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = [
        "//playwright/private:download_urls",
        "//playwright/private:known_browsers",
        "//playwright/private:util",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

starlark_doc_extract(
    name = "repositories.doc_extract",
    src = "repositories.bzl",
    deps = [":repositories"],
)
