load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":download_urls_test.bzl", "download_urls_test_suite")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "download_urls",
    srcs = ["download_urls.bzl"],
    visibility = [
        "//docs:__subpackages__",
        "//playwright:__subpackages__",
    ],
)

download_urls_test_suite(name = "download_urls_test")

bzl_library(
    name = "integrity_map",
    srcs = ["integrity_map.bzl"],
    visibility = [
        "//docs:__subpackages__",
        "//playwright:__subpackages__",
    ],
    deps = [":unzip_browser"],
)

bzl_library(
    name = "unzip_browser",
    srcs = ["unzip_browser.bzl"],
    visibility = [
        "//docs:__subpackages__",
        "//playwright:__subpackages__",
    ],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = [
        "//docs:__subpackages__",
        "//playwright:__subpackages__",
    ],
)

bzl_library(
    name = "known_browsers",
    srcs = ["known_browsers.bzl"],
    visibility = [
        "//docs:__subpackages__",
        "//playwright:__subpackages__",
    ],
)

bzl_library(
    name = "select_exec",
    srcs = ["select_exec.bzl"],
    visibility = [
        "//docs:__subpackages__",
        "//playwright:__subpackages__",
    ],
)
